# kova-core

./: Cargo.toml  README.md
docs/api/: README.md
docs/integration/: README.md
docs/protocol/: README.md
examples/: basic_usage.rs
examples/advanced_fleet/: main.rs
examples/agriculture/: main.rs
examples/basic_robot/: main.rs
scripts/deploy/: deploy.sh
scripts/monitor/: monitor.sh
src/: lib.rs
src/api/: graphql.rs  mod.rs  rest.rs  websocket.rs
src/blockchain/: arweave.rs  ipfs.rs  manager.rs  mod.rs  solana.rs
src/core/: config.rs  error.rs  mod.rs  network.rs  protocol.rs  rewards.rs  storage.rs  validation.rs
src/robots/: arduino.rs  mod.rs  raspberry_pi.rs
src/robots/ros2/: bridge.rs  config.rs  manager.rs  mod.rs
src/sdk/: javascript.rs  mod.rs  python.rs  rust.rs
src/sensors/: camera.rs  gps.rs  imu.rs  lidar.rs  manager.rs  mod.rs  thermal.rs
tests/unit/: blockchain_test.rs  sensors_test.rs  validation_test.rs
