[package]
name = "kova-core"
version = "0.1.0"
edition = "2021"
authors = ["Kova Systems <dev@kovasystems.com>"]
description = "Core library for the Kova decentralized robotics data network"
license = "MIT"
repository = "https://github.com/kovasystems/kova-core"
homepage = "https://www.kova.systems/"
documentation = "https://docs.rs/kova-core"
keywords = ["robotics", "blockchain", "sensors", "decentralized", "ros2", "ipfs"]
categories = ["network-programming", "cryptography::cryptocurrencies", "science::robotics"]
readme = "README.md"

[features]
default = ["sensors", "blockchain", "validation"]
sensors = ["opencv", "pcl", "image", "nalgebra"]
blockchain = ["solana", "arweave", "ipfs"]
validation = ["statrs", "ndarray", "linfa"]
ros2 = ["rclrs", "ros2-client"]
simulation = ["gazebo", "bullet3"]
all = ["sensors", "blockchain", "validation", "ros2", "simulation"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
eyre = "0.6"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
blake3 = "1.5"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = "0.14"

# Sensor processing
opencv = { version = "0.88", optional = true, features = ["opencv-4"] }
pcl = { version = "0.7", optional = true }
image = { version = "0.24", optional = true }
nalgebra = { version = "0.32", optional = true }
ndarray = { version = "0.15", optional = true }
statrs = { version = "0.16", optional = true }
linfa = { version = "0.7", optional = true }

# Blockchain
solana-client = { version = "1.17", optional = true }
solana-sdk = { version = "1.17", optional = true }
solana-program = { version = "1.17", optional = true }
arweave-rs = { version = "0.3", optional = true }
ipfs-http-client = { version = "0.7", optional = true }
web3 = { version = "0.19", optional = true }

# ROS2
rclrs = { version = "0.1", optional = true }
ros2-client = { version = "0.1", optional = true }

# Simulation
gazebo = { version = "0.1", optional = true }
bullet3 = { version = "0.1", optional = true }

# Networking
quinn = "0.10"
rustls = "0.21"
webpki = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Configuration
config = "0.13"
toml = "0.8"

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Concurrency
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"

# Compression
flate2 = "1.0"
lz4 = "1.24"

# Time
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"
mockall = "0.12"

[[bench]]
name = "sensor_processing"
harness = "criterion"

[[bench]]
name = "validation"
harness = "criterion"

[[bench]]
name = "blockchain"
harness = "criterion"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true